# General-Physics

./: ExamplePosterImprovements  Poster Sections  README.md  References.md  Writeup_plan.md  distances.py  plan.md
code/: .gitignore  CTM.py  README.md  main.ipynb  pyproject.toml
code/notebooks/: combining_data_and_model.ipynb  combining_data_and_model_poly.ipynb  flowbydirection.ipynb  foliumtest.ipynb  main.ipynb  naptan test.ipynb
code/src/LWR_Model/: CTM.py  __init__.py  distances.py
code/src/lwr_model/: CTM.py  __init__.py  config.py  data.py  distances.py  pipeline.py
