[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lwr-model"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "folium",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]